# wappysav

./: .gitignore  AppImageBuilder.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  appico.icns  com.taxicat.wappysav.desktop  encryptwindow.cpp  encryptwindow.h  encryptwindow.ui  handler.c  info.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nitro_compat.h  nitro_types.h  res.rc  save_proc.c  save_proc.h  wappysav.desktop  wappysav.pro  wd_def.h
.github/workflows/: c-cpp.yml  cmakeqt.yml
